# keepass-core

./: .gitignore  .gitleaks.toml  AGENTS.md  CONTRIBUTING.md  Cargo.toml  LICENSE-MIT  README.md  SECURITY.md  SUPPLY_CHAIN.md  deny.toml
.github/: dependabot.yml
.github/workflows/: ci.yml  fuzz.yml  miri.yml  secret-scan.yml
crates/keepass-core/: Cargo.toml
crates/keepass-core/examples/: kdbx_edit.rs
crates/keepass-core/src/: error.rs  kdbx.rs  lib.rs  protector.rs  secret.rs
crates/keepass-core/src/crypto/: cipher.rs  compression.rs  inner_stream.rs  kdf.rs  master_keys.rs  mod.rs
crates/keepass-core/src/format/: hashed_block_stream.rs  header.rs  header_hmac.rs  hmac_block_stream.rs  inner_header.rs  kdf_params.rs  mod.rs  tlv.rs  v3.rs  v4.rs  var_dictionary.rs
crates/keepass-core/src/model/: clock.rs  entry.rs  entry_editor.rs  group.rs  group_editor.rs  meta.rs  mod.rs  new_entry.rs  new_group.rs  portable.rs  types.rs  uuid_source.rs  vault.rs
crates/keepass-core/src/vault_ops/: binaries.rs  entry_ops.rs  group_ops.rs  history.rs  icons.rs  ids.rs  import_export.rs  meta_settings.rs  mod.rs  recycle.rs  reveal.rs  tombstones.rs
crates/keepass-core/src/xml/: decoder.rs  encoder.rs  mod.rs  reader.rs
crates/keepass-core/tests/: crypto_kdf_execution.rs  error_display.rs  field_protector.rs  format_kdf_params.rs  format_outer_header_tlv.rs  format_outer_header_typed.rs  format_outer_header_write.rs  format_signature.rs  format_var_dictionary.rs  format_var_dictionary_write.rs  kdbx_add_delete_entry.rs  kdbx_attachments.rs  kdbx_clock_plumbing.rs  kdbx_create_empty.rs  kdbx_cross_vault_import.rs  kdbx_custom_icons.rs  kdbx_edit_entry.rs  kdbx_edit_entry_extended_fields.rs  kdbx_editor_fields_preservation.rs  kdbx_group_mutation.rs  kdbx_history_restore.rs  kdbx_last_access.rs  kdbx_meta_setters.rs  kdbx_move_entry.rs  kdbx_recycle_bin.rs  kdbx_rekey.rs  kdbx_save_to_bytes.rs  kdbx_sealed_header.rs  kdbx_unknown_xml.rs  kdbx_unlock.rs  kdbx_vault_accessors.rs  kdbx_vault_walkers.rs  properties.rs  protector_pub.rs  save_determinism.rs  secret_hygiene.rs  tamper_detection.rs  xml_doctype_rejection.rs
crates/keepass-merge/: Cargo.toml
crates/keepass-merge/src/: apply.rs  auto.rs  binary_pool.rs  conflict.rs  conflict_resolution.rs  digest.rs  entry_merge.rs  error.rs  events.rs  field_access.rs  field_conflict.rs  hash.rs  history_merge.rs  lib.rs  merge.rs  meta_merge.rs  or_set.rs  outcome.rs  prune.rs  resolution.rs  time.rs  tombstone.rs
crates/keepass-merge/src/apply/: mod.rs  resolution.rs  tree.rs
crates/keepass-merge/tests/: attachment_apply.rs  attachment_conflict_resolution.rs  attachment_tombstones.rs  auto_merge.proptest-regressions  auto_merge.rs  binary_pool.rs  chaos_runner.rs  classify.rs  concurrent_move_convergence.rs  hash_scope_regression.rs  history_tombstones.rs  icon_classifier_apply.rs  icon_conflict_resolution.rs  meta_merge.rs  mixed_side_field_wins.rs  p2p_convergence.proptest-regressions  p2p_convergence.rs  pipeline_ordering.rs  properties.proptest-regressions  properties.rs  quota_prune.rs  resolution_adoption.rs  round_trip_echo.rs  scenarios.rs  sim_scenarios.rs  tag_set_merge.rs  tag_state_tombstones.rs
crates/keepass-merge/tests/common/: mod.rs  sim.rs
docs/: MUTATION.md
fuzz/: Cargo.toml
fuzz/fuzz_targets/: block_reader.rs  header_parser.rs  xml_parser.rs
tests/fixtures/: README.md  generate.py  verify.py
tests/fixtures/.node/: gen-kdbxweb.js  gen-protected-inner-binary.js  package.json
tests/fixtures/attachments/: mock-key.pem  unicode-café.txt
tests/fixtures/kdbxweb/: kdbx4-argon2d-p8.json  kdbx4-argon2d-p8.kdbx  kdbx4-attachments.json  kdbx4-attachments.kdbx  kdbx4-basic.json  kdbx4-basic.kdbx  kdbx4-chacha20.json  kdbx4-chacha20.kdbx  kdbx4-protected-inner-binary.json  kdbx4-protected-inner-binary.kdbx
tests/fixtures/keepassium/: kdbx-roundtrip.json  kdbx-roundtrip.kdbx
tests/fixtures/keepassxc/: kdbx3-attachments.json  kdbx3-attachments.kdbx  kdbx3-basic.json  kdbx3-basic.kdbx  kdbx3-deep-groups.json  kdbx3-deep-groups.kdbx  kdbx3-keyfile.json  kdbx3-keyfile.kdbx  kdbx3-minimal.json  kdbx3-unicode.json  kdbx3-unicode.kdbx  kdbx4-attachments.json  kdbx4-attachments.kdbx  kdbx4-basic.json  kdbx4-deep-groups.json  kdbx4-keyfile.json  kdbx4-keyfile.kdbx  kdbx4-keyfile.key  kdbx4-minimal.json  kdbx4-minimal.kdbx  kdbx4-unicode.json
tests/fixtures/macpass/: kdbx-roundtrip.json  kdbx-roundtrip.kdbx
tests/fixtures/malformed/: bad-magic.json  bad-magic.kdbx  broken-header.json  broken-header.kdbx  hmac-fail.json  hmac-fail.kdbx  truncated.json  truncated.kdbx
tests/fixtures/pykeepass/: custom-fields.json  custom-fields.kdbx  custom-icons.json  custom-icons.kdbx  editor-fields.json  editor-fields.kdbx  empty-timestamps.json  empty-timestamps.kdbx  history-unknown-xml.json  history-unknown-xml.kdbx  history.json  history.kdbx  kdbx4-keyfile-binary.json  kdbx4-keyfile-binary.kdbx  kdbx4-keyfile-binary.key  kdbx4-keyfile-hex.json  kdbx4-keyfile-hex.kdbx  kdbx4-keyfile-hex.key  large.json  large.kdbx  recycle-disabled.json  recycle-disabled.kdbx  recycle-empty.json  recycle-empty.kdbx  recycle-not-yet-created.json  recycle-not-yet-created.kdbx  recycle.json  recycle.kdbx  unknown-xml.json  unknown-xml.kdbx
tests/fixtures/strongbox/: kdbx-roundtrip.json  kdbx-roundtrip.kdbx
