[package]
name = "keepass-core"
description = "Reference implementation of the KeePass (KDBX) password database format in pure Rust. Lossless round-trip read/write for KDBX3 and KDBX4."
version.workspace = true
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
readme.workspace = true
keywords.workspace = true
categories.workspace = true

[lints]
workspace = true

[dependencies]
# Error handling.
thiserror = "2"

# Secret hygiene — zeroise memory on drop; prevent accidental Debug / print.
zeroize = { version = "1", features = ["zeroize_derive"] }
secrecy = "0.10"
subtle = "2"                       # constant-time comparison

# Identifiers.
uuid   = { version = "1", features = ["v4"] }
base64 = "0.22"                     # KeePass UUIDs + protected-value payloads are base64

# Crypto primitives — RustCrypto family, no unsafe.
sha2   = "0.11"                     # SHA-256, SHA-512
aes    = "0.9"                      # AES-256 block cipher (used ECB-style by AES-KDF)
cbc    = { version = "0.2", features = ["block-padding"] }  # AES-256-CBC with PKCS7
argon2 = "0.5"                      # Argon2d / Argon2id KDFs
hmac   = "0.13"                     # HMAC-SHA-256 for KDBX4 block verification
chacha20 = "0.10"                    # inner-stream cipher for KDBX4 protected XML
salsa20  = "0.11"                   # inner-stream cipher for KDBX3 protected XML
aes-gcm = "0.10"                    # in-memory protected-field wrap (FieldProtector)
# blake2      = "0.10"

# Compression.
flate2 = "1"                        # gzip decompression (both KDBX3 and KDBX4 payloads)

# Parsing.
quick-xml = "0.36"                  # streaming XML reader for KeePass inner document
winnow    = "1.0"                   # binary header TLVs

# Timestamps. `clock` enables `Utc::now()` via platform wall-clock
# bindings — needed by the mutation API's SystemClock. `wasmbind` is
# off because we don't target browser wasm.
chrono = { version = "0.4", default-features = false, features = ["std", "clock"] }

# Randomness — fresh seeds for `Kdbx::rekey`. The same crate is
# already in the dep tree transitively via uuid; we depend on it
# directly here so the import is explicit at our use site.
getrandom = "0.4"

[dev-dependencies]
# Fixture-sidecar parsing in integration tests. Only the tests need JSON;
# the library itself stays JSON-free.
serde_json = "1"

# Snapshot testing for XML round-trips.
# insta = { version = "1", features = ["yaml"] }

# Property-based testing for round-trip invariants.
# proptest = "1"

# Benchmarking.
# criterion = { version = "0.5", features = ["html_reports"] }

[features]
default = []

# Serde derives on model types. Off by default: exposing layout via Serialize
# is an API commitment that not every consumer needs.
serde = []

# Build-metadata docs.rs integration.
[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]
