[package]
name = "keepass-merge"
description = "Three-way merge logic for KeePass (KDBX) databases. Companion to the keepass-core crate."
version.workspace = true
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
readme.workspace = true
keywords.workspace = true
categories.workspace = true

[lints]
workspace = true

[dependencies]
chrono = { version = "0.4", default-features = false, features = ["std", "clock", "serde"] }
keepass-core = { path = "../keepass-core", version = "0.0.0" }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sha2 = "0.11"
subtle = "2"
thiserror = "2"
# Activity-log emission (sync-merge-strategies §6). Default features only —
# we emit at warn/info/error levels and let the engine layer pick a subscriber.
tracing = { version = "0.1", default-features = false, features = ["std", "attributes"] }
uuid = "1"

[dev-dependencies]
proptest = "1"
rand = { version = "0.10", default-features = false, features = ["std", "std_rng"] }
rand_chacha = { version = "0.9", default-features = false, features = ["std"] }
